Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62048

QtWayland client with xdg shell v6 destroy popups in wrong order

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.2, 5.10.1
    • 5.9.1, 5.10.0 Alpha
    • QPA: Wayland
    • None
    • 3f400e31fecd1c0436ad17d1be1dae7745c6a4f5

    Description

      To reproduce: run qtbase/examples/widgets/mainwindows/menus against weston version 2.0 or newer. Click on Edit, then move cursor to Format, so the submenu opens. Then move rapidly to Help.

      This causes the client to crash with the following error:

      zxdg_shell_v6@18: error 2: xdg_popup was destroyed while it was not the topmost popup.

      Update: this also happens with xdg-shell v5 on Weston 1.11

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes