Close popups in the correct order

According to the protocol, child popups have to be closed before
parents, but QMenuBar/QMenu will sometimes close the parent first.

Change-Id: Id027ac483b727a19388df619fe1503d794e12c12
Task-number: QTBUG-62048
Reviewed-by: Johan Helsing <johan.helsing@qt.io>